fav icon update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Front page </title>
 	<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lato|Montserrat|Raleway|Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="favicon" type="img/png" href="img/fav.png">
+	<link rel="fav icon" type="imgAGE/png" href="img/fav.png">
 </head>
 <body>
 
